--- a/src/app/start/start.component.css
+++ b/src/app/start/start.component.css
@@ -592,3 +592,9 @@ padding: 30px;
         width:50%;
     }
 }
+
+.full-height-centered {
+    /*min-height:100vh;*/
+    text-align:center;
+    /*background:#f97171;*/
+}
