--- a/src/app/start/start.component.html
+++ b/src/app/start/start.component.html
@@ -25,90 +25,14 @@
     <br>
     <br>
   </div>
-<!--<div class="body2">-->
-<!--  <div class="bodytext">-->
 
-
-    <!--<div class="alignleft">
-      <h2 class="colour1">THE HOME OF PERFECT LIPS.</h2>
-      <h3 class="colour1">Entrümpelungen in Berlin und Brandenburg</h3>
-      <div class="slide-left">
-      <p>
-        Whether you are looking to add volume to thin lips, even out asymmetrical lips, plump your
-      </p>
-        <p>
-        perfection or simply to enhance and define your cupid’s bow, then the London Lip Clinic
-        </p>
-        <p>
-        Street is the place to be seen (or not, should you prefer to opt for our ultra discrete
-        </p>
-        <p>
-        VIP service).
-      </p>
-      <p>  With a wealth of understanding and experience, Rupesh Shah has an unrivalled talent
-        </p>
-        <p>
-        impossibly beautiful lips using only non-surgical techniques. His artistry and meticulous
-        </p>
-        <p>
-          to detail combined with use of the very best lip filler products makes Rupesh the
-        </p>
-        <p>
-          mouths!
-      </p>
-      <p>  Transparenz ist für die BABAS Dienstleistungen oberstes Gebot. Wir bieten Ihnen
-      </p>
-        <p>
-        Wohnungsauflösung in Berlin unkomplizierte und schnelle Lösungen. Als Kunden erwarten Sie
-        </p>
-        <p>
-        uns als seriösem Dienstleister für die Wohnungsauflösung eine transparente Darstellung der
-        </p>
-        <p>
-        Preiskalkulation. So wissen Sie, was finanziell auf Sie zukommt. Wir berechnen einzelne
-        </p>
-        <p>
-        Positionen fair und basierend auf unseren Erfahrungswerten. Bei unserer Kalkulation kommt es
-        </p>
-        <p>
-        auf die Quadratmeter der aufzulösenden Wohnung in Berlin an.
-        </p>
-      </div>
-    </div>-->
-
-
-    <!--<div class="alignright">
-      <div style="background-size: 500px 500px;" [ngStyle]="{backgroundImage:'url(./assets/images/happy.png)'}" >
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-    </div>
-  </div>-->
-
-  <!--deneme-->
   <div class="responsive-two-columns">
     <div>
       <h2 class="colour1">THE HOMEE OF PERFECT LIPS.</h2>
       <h3 class="colour1">Entrümpelungen in Berlin und Brandenburg</h3>
       <div class="slide-left">
         <p>
-          Whether you are looking to add volume to thin lips, even out asymmetrical lips, plump your
+          Whether you are looking to add volume to thin lips, even out asymmetrical lips, plump
         </p>
         <p>
           perfection or simply to enhance and define your cupid’s bow, then the London Lip Clinic
@@ -119,30 +43,30 @@
         <p>
           VIP service).
         </p>
-        <p>  With a wealth of understanding and experience, Rupesh Shah has an unrivalled talent
+        <p>  With a wealth of understanding and experience, Rupesh Shah has an
         </p>
         <p>
-          impossibly beautiful lips using only non-surgical techniques. His artistry and meticulous
+          impossibly beautiful lips using only non-surgical techniques. His artistry and
         </p>
         <p>
-          to detail combined with use of the very best lip filler products makes Rupesh the
+          to detail combined with use of the very best lip filler products makes
         </p>
         <p>
           mouths!
         </p>
-        <p>  Transparenz ist für die BABAS Dienstleistungen oberstes Gebot. Wir bieten Ihnen
+        <p>  Transparenz ist für die BABAS Dienstleistungen oberstes Gebot.
         </p>
         <p>
-          Wohnungsauflösung in Berlin unkomplizierte und schnelle Lösungen. Als Kunden erwarten Sie
+          Wohnungsauflösung in Berlin unkomplizierte und schnelle Lösungen.
         </p>
         <p>
-          uns als seriösem Dienstleister für die Wohnungsauflösung eine transparente Darstellung der
+          uns als seriösem Dienstleister für die Wohnungsauflösung eine
         </p>
         <p>
-          Preiskalkulation. So wissen Sie, was finanziell auf Sie zukommt. Wir berechnen einzelne
+          Preiskalkulation. So wissen Sie, was finanziell auf Sie zukommt.
         </p>
         <p>
-          Positionen fair und basierend auf unseren Erfahrungswerten. Bei unserer Kalkulation kommt es
+          Positionen fair und basierend auf unseren Erfahrungswerten.
         </p>
         <p>
           auf die Quadratmeter der aufzulösenden Wohnung in Berlin an.
@@ -150,60 +74,55 @@
       </div>
     </div>
     <div>
-<!--      <div style="background-size: 500px 500px;" [ngStyle]="{backgroundImage:'url(./assets/images/happy.png)'}" >-->
         <img src="assets/images/happy.png" width="600" height="600">
-<!--      <div>-->
-<!--        <h2 class="colour1">THE HOMEE OF PERFECT LIPS.</h2>-->
-<!--        <h3 class="colour1">Entrümpelungen in Berlin und Brandenburg</h3>-->
-<!--        <div class="slide-left">-->
-<!--          <p>-->
-<!--            Whether you are looking to add volume to thin lips, even out asymmetrical lips, plump your-->
-<!--          </p>-->
-<!--          <p>-->
-<!--            perfection or simply to enhance and define your cupid’s bow, then the London Lip Clinic-->
-<!--          </p>-->
-<!--          <p>-->
-<!--            Street is the place to be seen (or not, should you prefer to opt for our ultra discrete-->
-<!--          </p>-->
-<!--          <p>-->
-<!--            VIP service).-->
-<!--          </p>-->
-<!--          <p>  With a wealth of understanding and experience, Rupesh Shah has an unrivalled talent-->
-<!--          </p>-->
-<!--          <p>-->
-<!--            impossibly beautiful lips using only non-surgical techniques. His artistry and meticulous-->
-<!--          </p>-->
-<!--          <p>-->
-<!--            to detail combined with use of the very best lip filler products makes Rupesh the-->
-<!--          </p>-->
-<!--          <p>-->
-<!--            mouths!-->
-<!--          </p>-->
-<!--          <p>  Transparenz ist für die BABAS Dienstleistungen oberstes Gebot. Wir bieten Ihnen-->
-<!--          </p>-->
-<!--          <p>-->
-<!--            Wohnungsauflösung in Berlin unkomplizierte und schnelle Lösungen. Als Kunden erwarten Sie-->
-<!--          </p>-->
-<!--          <p>-->
-<!--            uns als seriösem Dienstleister für die Wohnungsauflösung eine transparente Darstellung der-->
-<!--          </p>-->
-<!--          <p>-->
-<!--            Preiskalkulation. So wissen Sie, was finanziell auf Sie zukommt. Wir berechnen einzelne-->
-<!--          </p>-->
-<!--          <p>-->
-<!--            Positionen fair und basierend auf unseren Erfahrungswerten. Bei unserer Kalkulation kommt es-->
-<!--          </p>-->
-<!--          <p>-->
-<!--            auf die Quadratmeter der aufzulösenden Wohnung in Berlin an.-->
-<!--          </p>-->
-<!--        </div>-->
-<!--      </div>-->
-      </div>
     </div>
-<!--    <div class="responsive-two-columns">-->
-<!--      <div>1</div>-->
-<!--      <div>2</div>-->
-<!--    </div>-->
+    </div>
+
+  <div class="responsive-two-columns">
+    <div>
+      <img src="assets/images/female.png" width="600" height="400">
+    </div>
+    <div>
+      <h4 class="colour1">DADAS DIENSTLEISTUNGEN</h4>
+      <h2 class="colour1">EXPERTISE COUNTS FOR EVERYTHING.</h2>
+      <div class="slide-left2">
+        <p>
+          A prescriber, Member of the Royal Pharmaceutical Society and
+        </p>
+        <p>
+          advanced aesthetics practitioner, Rupesh has spent the last 10
+        </p>
+        <p>
+          years focusing primarily on the care and wellbeing of his
+        </p>
+        <p>
+          aesthetics patients, with lip fillers London being at the core of his
+        </p>
+        <p>
+          attention. In this time he has crafted an enviable reputation as the
+        </p>
+        <p>
+          greatest Lip Injector in London, and his strong celebrity following
+        </p>
+        <p>
+          along with an International appeal for VIP patients is a testament
+        </p>
+        <p>
+          to his expertise.
+        </p>
+    </div>
+  </div>
+
+  <div>
+  <r-c join class="full-height-centered">
+    <!--<c1-1 r-c middle>
+      <c1-1>-->
+        <img src="assets/images/woman.png" width="600" height="400">
+     <!-- </c1-1>
+    </c1-1>-->
+  </r-c>
+  </div>
+
 
     <div class="centerbody">
       <br>
@@ -255,43 +174,7 @@
   </div>
 
 
-  <div class="body4">
-    <div class="alignleft2">
-      <img src="assets/images/female.png" width="600" height="400">
-    </div>
-    <div class="alignright3">
-      <div class="bodytext2">
-        <h4 class="colour1">DADAS DIENSTLEISTUNGEN</h4>
-        <h2 class="colour1">EXPERTISE COUNTS FOR EVERYTHING.</h2>
-        <div class="slide-left2">
-        <p>
-          A prescriber, Member of the Royal Pharmaceutical Society and
-        </p>
-        <p>
-          advanced aesthetics practitioner, Rupesh has spent the last 10
-        </p>
-        <p>
-          years focusing primarily on the care and wellbeing of his
-        </p>
-        <p>
-          aesthetics patients, with lip fillers London being at the core of his
-        </p>
-        <p>
-          attention. In this time he has crafted an enviable reputation as the
-        </p>
-        <p>
-          greatest Lip Injector in London, and his strong celebrity following
-        </p>
-        <p>
-          along with an International appeal for VIP patients is a testament
-        </p>
-        <p>
-          to his expertise.
-        </p>
-        </div>
-      </div>
-    </div>
-  </div>
+
   <div class="body5">
     <div class="alignleft3">
       <div class="bodytext2">
