--- a/src/app/start/start.component.html
+++ b/src/app/start/start.component.html
@@ -1,31 +1,50 @@
-<br>
-<br>
-<div class="backgroundcolor">
-  <div style="background-size: 1200px 600px;" [ngStyle]="{backgroundImage:'url(./assets/images/pure.jpeg)'}"  >
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-  </div>
 
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+<!--<div class="shadow">
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <img class="logo" src="assets/images/pure.jpeg">
+</div>-->
+  <img src="assets/images/pure.jpeg" class="ri" />
+<!--<div class="backgroundcolor">-->
+<!--  <div style="background-size: 1200px 600px;" [ngStyle]="{backgroundImage:'url(./assets/images/pure.jpeg)'}"  >-->
+
+
+<!--  </div>-->
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
   <div class="responsive-two-columns">
     <div>
       <h2 class="colour1">THE HOMEE OF PERFECT LIPS.</h2>
@@ -113,82 +132,70 @@
     </div>
   </div>
 
-  <div>
-  <r-c join class="full-height-centered">
-    <!--<c1-1 r-c middle>
-      <c1-1>-->
-        <img src="assets/images/woman.png" width="600" height="400">
-     <!-- </c1-1>
-    </c1-1>-->
-  </r-c>
-  </div>
 
+    <div class="responsive-two-columns">
+      <div>
+        <h4 class="colour1">BABAS DIENSTLEISTUNGEN</h4>
+        <h2 class="colour1">Entrümpelung Berlin – faire und transparente Preise</h2>
+        <p> in Berlin erheblich variieren. Darüber hinaus muss
+          </p>
+        <p>
+          auch der Größe und der Art der zu entsorgenden Möblierung
+        </p>
+        </div>
+      </div>
 
-    <div class="centerbody">
-      <br>
-      <br>
-      <br>
-      <h2 class="colour1">BIGGER ISN’T ALWAYS BETTER.</h2>
-      <br>
-      <img src="assets/images/woman.png" width="600" height="400">
-      <br>
-      <br>
-      <br>
-      <h2 class="colour1"> Rupesh doesn’t believe you need excessive product to add incredible volume to your lips. Placement is key.</h2>
-      <br>
-      <div class="slide-left1">
+      <div>
+        <google-map [width]="400" [height]="300" [options]="mapOptions"></google-map>
+      </div>
+
+    </div>
+
+<!--  <div class="shadow">-->
+<!--    <img class="logo" src="assets/images/woman.png" width="600" height="400">-->
+<!--  </div>-->
+
+  <div class="centerbody">
+    <br>
+    <br>
+    <br>
+    <h2 class="colour1">BIGGER ISN’T ALWAYS BETTER.</h2>
+    <br>
+    <img src="assets/images/woman.png" width="600" height="400">
+    <br>
+    <br>
+    <br>
+    <h2 class="colour1"> Rupesh doesn’t believe you need excessive product to add incredible volume to your lips. Placement is key.</h2>
+    <br>
+    <div class="slide-left1">
       <p>
         All patients are unique, and as a medical prescriber in London with excellent anatomical understanding, he will listen to your
       </p>
-        <p>
+      <p>
         objectives and can assess not just your lips, but your facial proportions as a whole, to advise on the most appropriate amount
-        </p>
-        <p>
+      </p>
+      <p>
         of lip filler and where to apply this for maximum effect whilst maintaining natural looking lips.
       </p>
-      </div>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-      <div class="naturalborder">
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <div class="naturalborder">
       <h2 class="colour1"> Rupesh doesn’t believe you need excessive product to add incredible volume to your lips. Placement is key.</h2>
       <p class="colour2">
         Rupesh based in world famous Harley Street London, believes that the most exceptional lips appear to have had nothing injected at all. They are simply balanced, full and natural looking lips. Through employing the non-surgical lip filler techniques that Rupesh has perfected, he knows you will be leaving the London Lip Clinic with nothing but a smile – and some compliments.
       </p>
       <h3 class="colour1"> WHO DESIRES A FULLER, POUTIER LIP SHAPE.</h3>
-        <p class="colour2">
-          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-        </p>
-      </div>
-    </div>
-  <div class="body3">
-    <div class="alignleft">
-      <h2>
-      </h2>
-    </div>
-    <div class="alignright2">
+      <p class="colour2">
+        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+      </p>
     </div>
   </div>
 
-
-
-  <div class="body5">
-    <div class="alignleft3">
-      <div class="bodytext2">
-        <h4 class="colour1">BABAS DIENSTLEISTUNGEN</h4>
-        <h2 class="colour1">Entrümpelung Berlin – faire und transparente Preise</h2>
-        <p>Abhängig von der Größe der Wohnung oder des Hauses können die Kosten der Entrümpelung in Berlin erheblich variieren. Darüber hinaus muss auch der Größe und der Art der zu entsorgenden Möblierung Beachtung geschenkt werden, denn ein wichtiger Teil der Entrümpelung ist auch die Entsorgung der nicht mehr benötigten Gegenstände. Um Sie richtig über die Kosten zu informieren, erstellen wir Ihnen erst nach einer Vor-Ort Besichtigung die Rechnung. So können Sie sich sicher sein, dass unsere Preise für die Entrümpelung in Berlin stets transparent und somit nachvollziehbar sind. Noch Fragen? Gerne klären Sie unsere Fachberater über die Entrümpelung in Berlin auf und beraten Sie nach der Klärung aller offenen Fragen zu allen Entsorgungsfragen.</p>
-      </div>
-    </div>
-    <div class="alignright3">
-      <div class="my-google-map">
-        <google-map [width]="null" [height]="null" [options]="mapOptions"></google-map>
-      </div>
-    </div>
-  </div>
   <div class="body6">
     <div class="alignleft4">
       <div class="bodytext3">
@@ -343,4 +350,5 @@
 </div>
 <!--</div>-->
 <!--</div>-->
-</div>
+<!--</div>-->
+
