--- a/src/app/start/start.component.css
+++ b/src/app/start/start.component.css
@@ -229,12 +229,58 @@ float: left;
     height: 100px;
 }
 
-.my-google-map{
+/*.my-google-map{
   .map-container{
     width: 600px;
     height: 250px;
   }
+}*/
+
+div.shadow {
+    position:absolute;
+    max-width:45%;
+    max-height:45%;
+    top:50%;
+    left:50%;
+    overflow:visible;
 }
+img.logo {
+    position:relative;
+    max-width:100%;
+    max-height:100%;
+    margin-top:-50%;
+    margin-left:-50%;
+}
+
+img.ri
+{
+	position: absolute;
+	max-width: 80%;
+	top: 30%;
+	left: 10%;
+	border-radius: 3px;
+	box-shadow: 0 3px 6px rgba(0,0,0,0.9);
+}
+
+img.ri:empty
+{
+	top: 60%;
+	left: 50%;
+	-webkit-transform: translate(-50%, -50%);
+	-moz-transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%);
+	-o-transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);
+}
+
+@media screen and (orientation: portrait) {
+  img.ri { max-width: 90%; }
+}
+
+@media screen and (orientation: landscape) {
+  img.ri { max-height: 90%; }
+}
+
 .alignleft4 {
 
     width: 50%;
