--- a/src/app/start/start.component.html
+++ b/src/app/start/start.component.html
@@ -96,7 +96,42 @@
         <img src="assets/images/happy.png" width="600" height="600">
     </div>
     </div>
-
+  <div class="center-div">
+    <h2 class="colour1">BIGGER ISN’T ALWAYS BETTER.</h2>
+    <img src="assets/images/woman.png" width="600" height="400">
+    <br>
+    <br>
+    <br>
+    <h2 class="colour1"> Hello doesn’t believe you need excessive product to add incredible volume to your lips. Placement is key.</h2>
+    <br>
+    <div class="slide-left1">
+      <p>
+        All patients are unique, and as a medical prescriber in London with excellent anatomical understanding, he will listen to your
+      </p>
+      <p>
+        objectives and can assess not just your lips, but your facial proportions as a whole, to advise on the most appropriate amount
+      </p>
+      <p>
+        of lip filler and where to apply this for maximum effect whilst maintaining natural looking lips.
+      </p>
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <div class="naturalborder">
+      <h2 class="colour1"> Rupesh doesn’t believe you need excessive product to add incredible volume to your lips. Placement is key.</h2>
+      <p class="colour2">
+        Rupesh based in world famous Harley Street London, believes that the most exceptional lips appear to have had nothing injected at all. They are simply balanced, full and natural looking lips. Through employing the non-surgical lip filler techniques that Rupesh has perfected, he knows you will be leaving the London Lip Clinic with nothing but a smile – and some compliments.
+      </p>
+      <h3 class="colour1"> WHO DESIRES A FULLER, POUTIER LIP SHAPE.</h3>
+      <p class="colour2">
+        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+      </p>
+    </div>
+  </div>
   <div class="responsive-two-columns">
     <div>
       <img src="assets/images/female.png" width="600" height="400">
@@ -155,7 +190,18 @@
 <!--    <img class="logo" src="assets/images/woman.png" width="600" height="400">-->
 <!--  </div>-->
 
-  <div class="centerbody">
+    <div class="center-div">
+      <div class="bodytext3">
+        <div class="hockerimg">
+          <h4>BABAS DIENSTLEISTUNGEN</h4>
+          <h2>Jetzt Kontakt aufnehmen!</h2>
+          <p>Service wird bei uns Großgeschrieben! Alle Anfragen werden binnen 24H von uns beantwortet. </p>
+          <a routerLink="/ueberuns-component"  routerLinkActive="active" ariaCurrentWhenActive="page"><button class="button button5" >MEHR ERFAHREN</button></a>
+        </div>
+      </div>
+  </div>
+
+  <!--<div class="centerbody">
     <br>
     <br>
     <br>
@@ -194,9 +240,9 @@
         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
       </p>
     </div>
-  </div>
+  </div>-->
 
-  <div class="body6">
+  <!--<div class="body6">
     <div class="alignleft4">
       <div class="bodytext3">
         <div class="hockerimg">
@@ -211,9 +257,7 @@
     <br>
     <br>
     <br>
-    <div class="centerprogress">
-    </div>
-  </div>
+  </div>-->
     <div class="body8">
     <div class="alignright5">
       <div class="zoom">
