--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div>
-  <third-section></third-section>
-<header-section></header-section>
+  <first-section></first-section>
+ <!-- <third-section></third-section>
+<header-section></header-section>-->
 
   <header-root></header-root>
 <!--<app-first></app-first>-->
