--- a/src/app/uberuns/uberuns.component.html
+++ b/src/app/uberuns/uberuns.component.html
@@ -1,9 +1,11 @@
-<div class="allcolour">
-<br>
+<!--<div class="allcolour">-->
 <br>
 <br>
 <div class="centerbody">
-
+  <br>
+  <br>
+  <br>
+  <br>
   <h2>LIP FILLERS LONDON.</h2>
   <br>
   <img src="assets/icons/lipandface.png"  >
@@ -320,4 +322,4 @@
 
 <!--  </div>-->
 <!--</div>-->
-</div>
+<!--</div>-->
