--- a/src/app/start/start.component.html
+++ b/src/app/start/start.component.html
@@ -168,7 +168,7 @@
   </div>
 
 
-    <div class="responsive-two-columns">
+    <div class="responsive-two-columns" >
       <div>
         <h4 class="colour1">BABAS DIENSTLEISTUNGEN</h4>
         <h2 class="colour1">Entrümpelung Berlin – faire und transparente Preise</h2>
@@ -190,8 +190,8 @@
 <!--    <img class="logo" src="assets/images/woman.png" width="600" height="400">-->
 <!--  </div>-->
 
-    <div class="center-div">
-      <div class="bodytext3">
+    <div class="center-div" >
+      <div class="bodytext3" style="text-align:center">
         <div class="hockerimg">
           <h4>BABAS DIENSTLEISTUNGEN</h4>
           <h2>Jetzt Kontakt aufnehmen!</h2>
