--- a/src/app/start/start.component.html
+++ b/src/app/start/start.component.html
@@ -132,6 +132,11 @@
       </p>
     </div>
   </div>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
   <div class="responsive-two-columns">
     <div>
       <img src="assets/images/female.png" width="600" height="400">
@@ -166,10 +171,17 @@
         </p>
     </div>
   </div>
-
+<br>
+<br>
+<br>
+<br>
+<br>
 
     <div class="responsive-two-columns" >
       <div>
+
+        <br>
+        <br>
         <h4 class="colour1">BABAS DIENSTLEISTUNGEN</h4>
         <h2 class="colour1">Entrümpelung Berlin – faire und transparente Preise</h2>
         <p> in Berlin erheblich variieren. Darüber hinaus muss
@@ -178,12 +190,12 @@
           auch der Größe und der Art der zu entsorgenden Möblierung
         </p>
         </div>
-      </div>
-
       <div>
-        <google-map [width]="400" [height]="300" [options]="mapOptions"></google-map>
+        <br>
+        <br>
+        <google-map [width]="900" [height]="300" [options]="mapOptions"></google-map>
       </div>
-
+      </div>
     </div>
 
 <!--  <div class="shadow">-->
@@ -199,6 +211,10 @@
           <a routerLink="/ueberuns-component"  routerLinkActive="active" ariaCurrentWhenActive="page"><button class="button button5" >MEHR ERFAHREN</button></a>
         </div>
       </div>
+
+      <!--<div>
+        <google-map [width]="400" [height]="300" [options]="mapOptions"></google-map>
+      </div>-->
   </div>
 
   <!--<div class="centerbody">
