--- a/src/app/firstsection/firstsection.component.html
+++ b/src/app/firstsection/firstsection.component.html
@@ -40,14 +40,14 @@
         <a class="nav-link" href="#" routerLink="/contact-component"  routerLinkActive="active" ariaCurrentWhenActive="page">KONTAKFORMULAR</a>
       </li>
 
-     <!-- <li class="nav-item">
+      <!--<li class="nav-item">
       <a href="whatsapp://send?abid=phonenumber&text=Hello%2C%20World!"> <img src="assets/icons/whatsapp.png"></a>
         <br>
         <a href="mailto:myemailaddress@gmail.com"> <img src="assets/icons/email.png"> </a>
       </li>
 
-      <br>-->
-      <!--<li class="nav-item" style="text-align:right">
+      <br>
+      <li class="nav-item" style="text-align:right">
       <a href="mailto:myemailaddress@gmail.com"> <img src="assets/icons/email.png"> </a>
       </li>-->
     </ul>
