--- a/src/app/start/start.component.html
+++ b/src/app/start/start.component.html
@@ -45,7 +45,11 @@
   <br>
   <br>
   <br>
-  <div class="responsive-two-columns">
+  <br>
+  <br>
+  <br>
+  <br>
+  <div class="responsive-two-columns" >
     <div>
       <h2 class="colour1">THE HOMEE OF PERFECT LIPS.</h2>
       <h3 class="colour1">Entrümpelungen in Berlin und Brandenburg</h3>
@@ -96,7 +100,11 @@
         <img src="assets/images/happy.png" width="600" height="600">
     </div>
     </div>
-  <div class="center-div">
+  <br>
+  <br>
+  <br>
+  <br>
+  <div class="center-div" style="text-align:center">
     <h2 class="colour1">BIGGER ISN’T ALWAYS BETTER.</h2>
     <img src="assets/images/woman.png" width="600" height="400">
     <br>
@@ -106,13 +114,22 @@
     <br>
     <div class="slide-left1">
       <p>
-        All patients are unique, and as a medical prescriber in London with excellent anatomical understanding, he will listen to your
+        All patients are unique, and as a medical prescriber in London with excellent
       </p>
       <p>
-        objectives and can assess not just your lips, but your facial proportions as a whole, to advise on the most appropriate amount
+        anatomical understanding, he will listen to your
       </p>
       <p>
-        of lip filler and where to apply this for maximum effect whilst maintaining natural looking lips.
+        objectives and can assess not just your lips, but your facial proportions
+      </p>
+      <p>
+        as a whole, to advise on the most appropriate amount
+      </p>
+      <p>
+        of lip filler and where to apply this for maximum effect whilst maintaining
+      </p>
+      <p>
+        natural looking lips.
       </p>
     </div>
     <br>
@@ -197,12 +214,38 @@
       </div>
       </div>
     </div>
+  <div class="responsive-three-columns">
+    <div class="item">
+      <div class="zoom">
+        <img src="assets/images/aesthetic-1.jpg" class="w3-round">
+<!--        <p>Text Text Text Text Text Text</p>-->
+      </div>
+    </div>
+    <div class="item">
+      <div class="zoom">
+        <img src="assets/images/aesthetic-2.jpg" class="w3-round">
+<!--      <p>Text Text Text Text Text Text</p>-->
+
+      </div>
+    </div>
+
+    <div class="item">
+      <div class="zoom">
+      <img class= deneme1 src="assets/images/aesthetic-3.jpg" class="w3-round">
+<!--      <p>Text Text Text Text Text Text</p>-->
+      </div>
+    </div>
+  </div>
+
 
 <!--  <div class="shadow">-->
 <!--    <img class="logo" src="assets/images/woman.png" width="600" height="400">-->
 <!--  </div>-->
-
-    <div class="center-div" >
+<br>
+<br>
+<br>
+<br>
+    <!--<div class="center-div" >
       <div class="bodytext3" style="text-align:center">
         <div class="hockerimg">
           <h4>BABAS DIENSTLEISTUNGEN</h4>
@@ -211,42 +254,36 @@
           <a routerLink="/ueberuns-component"  routerLinkActive="active" ariaCurrentWhenActive="page"><button class="button button5" >MEHR ERFAHREN</button></a>
         </div>
       </div>
-
-      <!--<div>
-        <google-map [width]="400" [height]="300" [options]="mapOptions"></google-map>
-      </div>-->
-  </div>
-
-  <!--<div class="centerbody">
+    </div>-->
+<br>
+<br>
+<br>
+<!--  <div class="center-div" style="text-align:center">-->
+    <br>
+    <br>
+<!--    <h2 class="colour1">BIGGER ISN’T ALWAYS BETTER.</h2>-->
     <br>
     <br>
     <br>
-    <h2 class="colour1">BIGGER ISN’T ALWAYS BETTER.</h2>
-    <br>
-    <img src="assets/images/woman.png" width="600" height="400">
-    <br>
-    <br>
-    <br>
-    <h2 class="colour1"> Rupesh doesn’t believe you need excessive product to add incredible volume to your lips. Placement is key.</h2>
-    <br>
-    <div class="slide-left1">
-      <p>
-        All patients are unique, and as a medical prescriber in London with excellent anatomical understanding, he will listen to your
-      </p>
-      <p>
-        objectives and can assess not just your lips, but your facial proportions as a whole, to advise on the most appropriate amount
-      </p>
-      <p>
-        of lip filler and where to apply this for maximum effect whilst maintaining natural looking lips.
-      </p>
-    </div>
+<!--    <h2 class="colour1">BIGGER ISN’T ALWAYS BETTER.</h2>-->
+    <!--<div class="three-columns-grid">
+      <div class="zoom">
+        <img src="assets/images/aesthetic-1.jpg" width="150" height="375">
+      </div>
+      <div class="zoom">
+        <img src="assets/images/aesthetic-2.jpg" width="250" height="375">
+      </div>
+      <div class="zoom">
+        <img src="assets/images/aesthetic-3.jpg" width="250" height="375">
+      </div>
+    </div>-->
     <br>
     <br>
     <br>
+<!--    <h2 class="colour1"> Hello doesn’t believe you need excessive product to add incredible volume to your lips. Placement is key.</h2>-->
     <br>
-    <br>
-    <br>
-    <div class="naturalborder">
+<!--  </div>-->
+    <!--<div class="naturalborder">
       <h2 class="colour1"> Rupesh doesn’t believe you need excessive product to add incredible volume to your lips. Placement is key.</h2>
       <p class="colour2">
         Rupesh based in world famous Harley Street London, believes that the most exceptional lips appear to have had nothing injected at all. They are simply balanced, full and natural looking lips. Through employing the non-surgical lip filler techniques that Rupesh has perfected, he knows you will be leaving the London Lip Clinic with nothing but a smile – and some compliments.
@@ -255,26 +292,12 @@
       <p class="colour2">
         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
       </p>
-    </div>
-  </div>-->
+    </div>-->
 
-  <!--<div class="body6">
-    <div class="alignleft4">
-      <div class="bodytext3">
-        <div class="hockerimg">
-        <h4>BABAS DIENSTLEISTUNGEN</h4>
-        <h2>Jetzt Kontakt aufnehmen!</h2>
-        <p>Service wird bei uns Großgeschrieben! Alle Anfragen werden binnen 24H von uns beantwortet. </p>
-        <a routerLink="/ueberuns-component"  routerLinkActive="active" ariaCurrentWhenActive="page"><button class="button button5" >MEHR ERFAHREN</button></a>
-        </div>
-        </div>
-    </div>
-    <br>
-    <br>
-    <br>
-    <br>
-  </div>-->
-    <div class="body8">
+<!--  <div class="center-div" >-->
+
+<!--  </div>-->
+   <!-- <div class="body8">
     <div class="alignright5">
       <div class="zoom">
         <img src="assets/images/aesthetic-1.jpg" width="250" height="375">
@@ -306,10 +329,11 @@
       <p>Service wird bei uns Großgeschrieben! Alle Anfragen werden binnen 24H von uns beantwortet. </p>
       </div>
     </div>
-    </div>
-<div class="body10">
+    </div>-->
+
+<!--<div class="body10">
     <div class="row">
-      <div class="alignleft7">
+      <div class="alignleft7">-->
       <div class="column">
         <div class="container2">
           <img src="assets/images/hand1.jpg" alt="Avatar" class="image2" style="width:143%">
@@ -334,13 +358,37 @@
           </div>
         </div>
       </div>
+  <div class="column">
+    <div class="container2">
+      <img src="assets/images/aesthetic6.jpg" alt="Avatar" class="image2" style="width:143%">
+      <div class="overlay2">
+        <div class="text4">LIPSTICK</div>
       </div>
     </div>
-</div>
-    <div class="body11">
-      <div class="alignleft8">
+  </div>
+  <div class="column">
+    <div class="container2">
+      <img src="assets/images/aesthetic4.jpg" alt="Avatar" class="image2" style="width:143%">
+      <div class="overlay2">
+        <div class="text4">SKINCARE</div>
+      </div>
+    </div>
+  </div>
+  <div class="column">
+    <div class="container2">
+      <img src="assets/images/aesthetic5.jpg" alt="Mountains" class="image2" style="width:143%">
+      <div class="overlay2">
+        <div class="text4">COSMETIC</div>
+      </div>
+    </div>
+  </div>
+     <!-- </div>
+    </div>
+</div>-->
+    <!--<div class="body11">
+      <div class="alignleft8">-->
         <div class="row">
-          <div class="alignleft7">
+          <!--<div class="alignleft7">-->
             <div class="column">
               <div class="container2">
                 <!--        <div class="alignright6">-->
@@ -366,7 +414,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          <!--</div>-->
         </div>
         <div class="row">
           <div class="column1">
@@ -406,8 +454,8 @@
               9:00am - 6:00pm
           </div>
         </div>
-    </div>
-</div>
+    <!--</div>
+</div>-->
 <!--</div>-->
 <!--</div>-->
 <!--</div>-->
