--- a/src/app/start/start.component.css
+++ b/src/app/start/start.component.css
@@ -476,11 +476,11 @@ div.slide-left2 {
 }
 
 .zoom {
-  padding: 5px;
-  transition: transform .10s; /* Animation */
-  width: 2px;
-  height: 4px;
-  margin: 0 auto;
+  /*padding: 5px;*/
+  transition: transform .10s;
+  /*width: 2px;*/
+  /*height: 4px;*/
+  /*margin: 0 auto;*/
 }
 
 .zoom:hover {
@@ -654,4 +654,73 @@ padding: 30px;
     /*min-height:100vh;*/
     text-align:center;
     /*background:#f97171;*/
+}
+
+.child-container {
+width: 100%;
+max-width: 350px;
+min-height: 300px;
+background: dodgerblue;
+}
+
+.parent-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+}
+
+/* container */
+.three-columns-grid {
+    display: grid;
+    grid-auto-rows: 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+/* columns */
+.three-columns-grid > * {
+    padding:1rem;
+}
+/*
+.columns-3 {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.columns-3 > * {
+    width: 100%;
+}*/
+
+.container {
+   display: flex;
+}
+.item {
+   flex:1;
+   text-align: center;
+   /*border: 1px solid red;*/
+   margin: 6px;
+}
+.w3-round {
+   max-width: 258px;
+}
+
+/* container */
+.responsive-three-columns {
+    display:flex;
+    flex-wrap: wrap;
+}
+
+/* columns */
+.responsive-three-columns > * {
+    width:100%;
+    padding:1rem;
+}
+
+/* tablet breakpoint */
+@media (min-width:768px) {
+    .responsive-three-columns > * {
+        width:50%;
+    }
 }
