--- a/src/app/start/start.component.html
+++ b/src/app/start/start.component.html
@@ -387,11 +387,23 @@
 </div>-->
     <!--<div class="body11">
       <div class="alignleft8">-->
+
+
         <div class="row">
+          <br>
+          <br>
+          <br>
           <!--<div class="alignleft7">-->
             <div class="column">
               <div class="container2">
                 <!--        <div class="alignright6">-->
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
                 <img src="assets/images/phone1.jpg" alt="Avatar" class="image2" style="width:143%">
                 <div class="overlay2">
                   <div class="text4">CALL US</div>
@@ -400,14 +412,29 @@
             </div>
             <div class="column">
               <div class="container2">
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
                 <img src="assets/images/build.jpg" alt="Avatar" class="image2" style="width:143%">
                 <div class="overlay2">
                   <div class="text4">ADRESS</div>
                 </div>
               </div>
             </div>
+
             <div class="column">
               <div class="container2">
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
                 <img src="assets/images/sun.jpg" alt="Mountains" class="image2" style="width:143%">
                 <div class="overlay2">
                   <div class="text4">OPENING TIMES</div>
@@ -416,7 +443,47 @@
             </div>
           <!--</div>-->
         </div>
-        <div class="row">
+  <div class="naturalborder1" style="bacground-color:#FDF4E3">
+    <div class="row">
+      <div class="column1">
+        <h5>
+          CALL US
+        </h5>
+        <br>
+        <p>
+          07956 576666
+          <br>
+          07956 576666
+        </p>
+      </div>
+      <div class="column1">
+        <h5>ADDRESS</h5>
+        <br>
+        <p>
+          8 Harley Street,
+          <br>
+          London,
+          <br>
+          W1G 9QY
+        </p>
+      </div>
+      <div class="column1">
+        <h5>OPENING
+          <br>TIMES  </h5>
+        <p>
+
+          Weekdays
+          <br>
+          9:00am - 9:00pm
+          <br>
+
+          Weekends
+          <br>
+          9:00am - 6:00pm
+      </div>
+    </div>
+  </div>
+       <!-- <div class="row">
           <div class="column1">
             <h5>
               CALL US
@@ -453,7 +520,7 @@
               <br>
               9:00am - 6:00pm
           </div>
-        </div>
+        </div>-->
     <!--</div>
 </div>-->
 <!--</div>-->
