--- a/src/app/start/start.component.css
+++ b/src/app/start/start.component.css
@@ -528,7 +528,7 @@ div.slide-left2 {
 
 .image2 {
   display: block;
-  width: 100%;
+
   height: auto;
 }
 
@@ -612,23 +612,22 @@ text-align: center;
 }
 
 .row1 {
-  left: 40px;
-  padding-right: 40px;
+  left: 50px;
+  padding-right: 50px;
 }
 
 .column1 {
-  width: 30%;
-  padding: 30px;
-  height: 200px; /* Should be removed. Only for demonstration */
+  max-width: 30%;
+  padding: 50px;
+/*  height: 200px; *//* Should be removed. Only for demonstration */
 }
 
 .naturalborder1{
-border-style: solid;
+/*border-style: solid;*/
 border-collapse: separate;
-padding: 30px;
+/*padding: 30px;*/
   background-color: #E6BB8E;
-  color: white;
-  text-align: left;
+  color: #FDF4E3;
 }
 
 /* container */
