--- a/src/app/start/start.component.html
+++ b/src/app/start/start.component.html
@@ -389,7 +389,7 @@
       <div class="alignleft8">-->
 
 
-        <div class="row">
+<!--        <div class="row">-->
           <br>
           <br>
           <br>
@@ -397,13 +397,7 @@
             <div class="column">
               <div class="container2">
                 <!--        <div class="alignright6">-->
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
+
                 <img src="assets/images/phone1.jpg" alt="Avatar" class="image2" style="width:143%">
                 <div class="overlay2">
                   <div class="text4">CALL US</div>
@@ -412,13 +406,7 @@
             </div>
             <div class="column">
               <div class="container2">
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
+
                 <img src="assets/images/build.jpg" alt="Avatar" class="image2" style="width:143%">
                 <div class="overlay2">
                   <div class="text4">ADRESS</div>
@@ -428,13 +416,7 @@
 
             <div class="column">
               <div class="container2">
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
+
                 <img src="assets/images/sun.jpg" alt="Mountains" class="image2" style="width:143%">
                 <div class="overlay2">
                   <div class="text4">OPENING TIMES</div>
@@ -442,7 +424,7 @@
               </div>
             </div>
           <!--</div>-->
-        </div>
+<!--        </div>-->
   <div class="naturalborder1" style="bacground-color:#FDF4E3">
     <div class="row">
       <div class="column1">
